--- a/package.json
+++ b/package.json
@@ -10,11 +10,11 @@
   },
   "dependencies": {
     "@splidejs/react-splide": "^0.7.12",
+    "@vercel/analytics": "^1.1.1",
     "mongodb": "^6.2.0",
     "next": "14.0.1",
     "react": "^18",
     "react-dom": "^18",
-    "react-rough-notation": "^1.0.5",
     "sass": "^1.69.5",
     "vercel": "^32.5.0"
   },
